--- a/datamanager/docker-compose.yml
+++ b/datamanager/docker-compose.yml
@@ -1,6 +1,19 @@
 version: "3.8"
 
 services:
+  homeassistant:
+    container_name: homeassistant
+    image: ghcr.io/home-assistant/home-assistant:stable
+    restart: always
+    privileged: true
+    devices:
+      - /dev/serial/by-id/usb-Nabu_Casa_SkyConnect_v1.0_0e9226d6be96ed11b33dc698a7669f5d-if00-port0:/dev/ttyUSB0
+    volumes:
+      - /etc/localtime:/etc/localtime:ro
+      - homeassistant_config:/config
+      - ./configuration.yaml:/config/configuration.yaml
+    networks:
+      - local
   grafana:
     container_name: grafana
     image: grafana/grafana
@@ -19,9 +32,9 @@ services:
     image: influxdb:1.8-alpine
     restart: always
     environment:
-      - INFLUXDB_DB=$INFLUXDB_DB
-      - INFLUXDB_ADMIN_USER=$INFLUXDB_ADMIN_USER
-      - INFLUXDB_ADMIN_PASSWORD=$INFLUXDB_ADMIN_PASSWORD
+      - INFLUXDB_DB=influxdb
+      - INFLUXDB_ADMIN_USER=admin
+      - INFLUXDB_ADMIN_PASSWORD=admin
     volumes:
       - influxdb_data:/var/lib/influxdb
     networks:
@@ -31,20 +44,22 @@ services:
     image: telegraf
     restart: always
     environment:
-      - HOST_ETC=$HOST_ETC
-      - HOST_PROC=$HOST_PROC
-      - HOST_SYS=$HOST_SYS
-      - HOST_VAR=$HOST_VAR
-      - HOST_RUN=$HOST_RUN
-      - HOST_MOUNT_PREFIX=$HOST_MOUNT_PREFIX
+      - HOST_ETC=/hostfs/etc
+      - HOST_PROC=/hostfs/proc
+      - HOST_SYS=/hostfs/sys
+      - HOST_VAR=/hostfs/var
+      - HOST_RUN=/hostfs/run
+      - HOST_MOUNT_PREFIX=/hostfs
     volumes:
       - /:/hostfs:ro
       - /var/run/docker.sock:/var/run/docker.sock
       - telegraf_config:/etc/telegraf
+      - ./telegraf.conf:/etc/telegraf/telegraf.conf
     networks:
       - local
 
 volumes:
+  homeassistant_config:
   grafana_data:
   influxdb_data:
   telegraf_config:
