--- a/datamanager/docker-compose.yml
+++ b/datamanager/docker-compose.yml
@@ -1,26 +1,13 @@
 version: "3.8"
 
 services:
-  homeassistant:
-    container_name: homeassistant
-    image: ghcr.io/home-assistant/home-assistant:stable
-    restart: always
-    privileged: true
-    devices:
-      - /dev/serial/by-id/usb-Nabu_Casa_SkyConnect_v1.0_0e9226d6be96ed11b33dc698a7669f5d-if00-port0:/dev/ttyUSB0
-    volumes:
-      - /etc/localtime:/etc/localtime:ro
-      - homeassistant_config:/config
-      - ./configuration.yaml:/config/configuration.yaml
-    networks:
-      - local
   grafana:
     container_name: grafana
     image: grafana/grafana
     restart: always
     environment:
-      - GF_SECURITY_ADMIN_USER=$GF_SECURITY_ADMIN_USER
-      - GF_SECURITY_ADMIN_PASSWORD=$GF_SECURITY_ADMIN_PASSWORD
+      - GF_SECURITY_ADMIN_USER=admin
+      - GF_SECURITY_ADMIN_PASSWORD=changeme
       - GF_SECURITY_ALLOW_EMBEDDING=true
       - GF_INSTALL_PLUGINS=
     volumes:
@@ -59,7 +46,6 @@ services:
       - local
 
 volumes:
-  homeassistant_config:
   grafana_data:
   influxdb_data:
   telegraf_config:
