--- a/datamanager/docker-compose.yml
+++ b/datamanager/docker-compose.yml
@@ -30,6 +30,9 @@ services:
     container_name: telegraf
     image: telegraf
     restart: always
+    # "1000" is the group id of the docker daemon, run: $(stat -c '%g' /var/run/docker.sock)
+    # see: https://www.influxdata.com/blog/docker-run-telegraf-as-non-root/
+    user: telegraf:1000
     environment:
       - HOST_ETC=/hostfs/etc
       - HOST_PROC=/hostfs/proc
