Updated HA package repo

--- a/homeassistant/docker-compose.yml
+++ b/homeassistant/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3.8"
 services:
   homeassistant:
     container_name: homeassistant
-    image: homeassistant/home-assistant:latest
+    image: ghcr.io/home-assistant/home-assistant:stable
     restart: always
     privileged: true
     environment:
