--- a/openvpn/docker-compose.yml
+++ b/openvpn/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   openvpn:
     container_name: openvpn
@@ -7,6 +5,8 @@ services:
     restart: always
     cap_add:
       - NET_ADMIN
+    devices:
+      - /dev/net/tun
     ports:
       - 1194:1194/udp
     volumes:
