Updated VPN, removed version of compose files

--- a/homeassistant/docker-compose.yml
+++ b/homeassistant/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   homeassistant:
     container_name: homeassistant
@@ -7,12 +5,12 @@ services:
     restart: always
     privileged: true
     environment:
-      - TZ=$TZ
+      - TZ=$(cat /etc/timezone)
     devices:
       - /dev/serial/by-id/usb-Nabu_Casa_SkyConnect_v1.0_0e9226d6be96ed11b33dc698a7669f5d-if00-port0:/dev/ttyUSB0
     volumes:
       - /etc/localtime:/etc/localtime:ro
-      - config:/config
+      - /mnt/data/homeassistant/config:/config
     networks:
       - local
 
