--- a/dashy/docker-compose.yml
+++ b/dashy/docker-compose.yml
@@ -1,17 +1,12 @@
-version: "3.8"
-
 services:
   dashy:
     container_name: dashy
     image: lissy93/dashy
     restart: always
     volumes:
-      - config:/app/public
+      - /mnt/data/dashy/config:/app/public
     networks:
       - local
-
-volumes:
-  config:
 
 networks:
   local:
