--- a/datamanager/docker-compose.yml
+++ b/datamanager/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   grafana:
     container_name: grafana
@@ -11,7 +9,7 @@ services:
       - GF_SECURITY_ALLOW_EMBEDDING=true
       - GF_INSTALL_PLUGINS=
     volumes:
-      - grafana_data:/var/lib/grafana
+      - /mnt/data/grafana/data:/var/lib/grafana
     networks:
       - local
   influxdb:
@@ -23,16 +21,14 @@ services:
       - INFLUXDB_ADMIN_USER=admin
       - INFLUXDB_ADMIN_PASSWORD=admin
     volumes:
-      - influxdb_data:/var/lib/influxdb
+      - /mnt/data/influxdb/data:/var/lib/influxdb
     networks:
       - local
   telegraf:
     container_name: telegraf
     image: telegraf
     restart: always
-    # "1000" is the group id of the docker daemon, run: $(stat -c '%g' /var/run/docker.sock)
-    # see: https://www.influxdata.com/blog/docker-run-telegraf-as-non-root/
-    user: telegraf:1000
+    user: telegraf:$(stat -c '%g' /var/run/docker.sock)
     environment:
       - HOST_ETC=/hostfs/etc
       - HOST_PROC=/hostfs/proc
@@ -43,15 +39,9 @@ services:
     volumes:
       - /:/hostfs:ro
       - /var/run/docker.sock:/var/run/docker.sock
-      - telegraf_config:/etc/telegraf
-      - ./telegraf.conf:/etc/telegraf/telegraf.conf
+      - /mnt/data/telegraf/config:/etc/telegraf
     networks:
       - local
-
-volumes:
-  grafana_data:
-  influxdb_data:
-  telegraf_config:
 
 networks:
   local:
