--- a/duckdns/docker-compose.yml
+++ b/duckdns/docker-compose.yml
@@ -1,22 +1,17 @@
-version: "3.8"
-
 services:
   duckdns:
     container_name: duckdns
     image: lscr.io/linuxserver/duckdns
     restart: always
     environment:
-      - TZ=$TZ
+      - TZ=$(cat /etc/timezone)
       - SUBDOMAINS=$SUBDOMAINS
       - TOKEN=$TOKEN
       - LOG_FILE=false
     volumes:
-      - config:/config
+      - /mnt/data/duckdns/config:/config
     networks:
       - local
-
-volumes:
-  config:
 
 networks:
   local:
