--- a/nginxproxymanager/docker-compose.yml
+++ b/nginxproxymanager/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   nginxproxymanager:
     container_name: nginxproxymanager
@@ -10,14 +8,10 @@ services:
       - 443:443
       - 81:81
     volumes:
-      - data:/data
-      - certs:/etc/letsencrypt
+      - /mnt/data/nginxproxymanager/data:/data
+      - /mnt/data/nginxproxymanager/certs:/etc/letsencrypt
     networks:
       - local
-
-volumes:
-  data:
-  certs:
 
 networks:
   local:
