--- a/nodered/docker-compose.yml
+++ b/nodered/docker-compose.yml
@@ -1,19 +1,14 @@
-version: "3.8"
-
 services:
   nodered:
     container_name: nodered
     image: nodered/node-red:latest
     restart: always
     environment:
-      - TZ=$TZ
+      - TZ=$(cat /etc/timezone)
     volumes:
-      - data:/data
+      - /mnt/data/nodered/data:/data
     networks:
       - local
-
-volumes:
-  data:
 
 networks:
   local:
