--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.8"
-
 services:
   portainer:
     container_name: portainer
@@ -7,12 +5,9 @@ services:
     restart: always
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - data:/data
+      - /mnt/data/portainer/data:/data
     networks:
       - local
-
-volumes:
-  data:
 
 networks:
   local:
