--- a/homeassistant/docker-compose.yml
+++ b/homeassistant/docker-compose.yml
@@ -5,9 +5,9 @@ services:
     restart: always
     privileged: true
     environment:
-      - TZ=$(cat /etc/timezone)
+      - TZ=${TZ} # cat /etc/timezone
     devices:
-      - /dev/serial/by-id/usb-Nabu_Casa_SkyConnect_v1.0_0e9226d6be96ed11b33dc698a7669f5d-if00-port0:/dev/ttyUSB0
+      - ${DEVICE}:/dev/ttyUSB0 # ls -l /dev/serial/by-id/
     volumes:
       - /etc/localtime:/etc/localtime:ro
       - /mnt/data/homeassistant/config:/config
