--- a/duckdns/.env
+++ b/duckdns/.env
@@ -1,3 +1,5 @@
-TZ=Europe/Paris
-SUBDOMAINS=<subdomain1>,<subdomain2>
+UID=<docker_uid>
+GID=<docker_gid>
+TZ=<timezone>
+SUBDOMAINS=<subdomain_1>,<subdomain_2>
 TOKEN=<token>
