--- a/wireguard/.env
+++ b/wireguard/.env
@@ -1,2 +1,4 @@
-WG_HOST=<vpndomain>
-PASSWORD_HASH=<passwordhash>
+UID=<docker_uid>
+GID=<docker_gid>
+WG_HOST=<vpn_domain>
+PASSWORD_HASH=<password_hash>
