--- a/homeassistant/.env
+++ b/homeassistant/.env
@@ -1,2 +1,4 @@
-TZ=Europe/Paris
+UID=<docker_uid>
+GID=<docker_gid>
+TZ=<timezone>
 DEVICE=/dev/serial/by-id/usb-Nabu_Casa_SkyConnect_v1.0_0e9226d6be96ed11b33dc698a7669f5d-if00-port0
