--- a/nginxproxymanager/docker-compose.yml
+++ b/nginxproxymanager/docker-compose.yml
@@ -3,15 +3,20 @@ services:
     container_name: nginxproxymanager
     image: jc21/nginx-proxy-manager:latest
     restart: always
+    user: "${UID}:${GID}"
     ports:
-      - 80:80
-      - 443:443
-      - 81:81
+      - "80:80"
+      - "443:443"
+      - "81:81"
     volumes:
-      - /mnt/data/nginxproxymanager/data:/data
-      - /mnt/data/nginxproxymanager/certs:/etc/letsencrypt
+      - data:/data
+      - certs:/etc/letsencrypt
     networks:
       - local
+
+volumes:
+  data:
+  certs:
 
 networks:
   local:
