--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -3,11 +3,17 @@ services:
     container_name: portainer
     image: portainer/portainer-ce:latest
     restart: always
+    user: "${UID}:${GID}"
+    ports:
+      - "9443:9443/tcp"
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
-      - /mnt/data/portainer/data:/data
+      - data:/data
     networks:
       - local
+
+volumes:
+  data:
 
 networks:
   local:
